# dash-mcp-server

./: pyproject.toml
src/dash_mcp_server/: server.py
