[project]
name = "dash-mcp-server"
version = "1.1.1"
description = "MCP server for Dash, the macOS documentation browser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.27.0",
    "pydantic==2.13.3",
    "httpx==0.28.1",
    "html2text==2024.2.26",
    "beautifulsoup4==4.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dash_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
dash-mcp-server = "dash_mcp_server:main"
